--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   box-shadow: 0 0 10px 3px #ececec;
   border-radius: 8px;
 }
+.product_hovr {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
+  background-color: #333;
+  transition: all 1.5s cubic-bezier(0, 0, 0.05, 1);
+}
 .my-image {
   background-image: url("./images/slider.png");
 }
@@ -69,8 +74,6 @@
   font-size: 24px;
   font-style: normal;
   text-align: center;
-  z-index: 999;
-  position: absolute;
 
   font-weight: 600;
   line-height: normal;
