--- a/src/App.css
+++ b/src/App.css
@@ -67,9 +67,19 @@
   font-weight: 500;
   line-height: 150%; /* 24px */
 }
+
 .back {
   background-image: url("../src/images/back.jpg");
 }
+.dropdowncontent {
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+/* .slick-prev:before,
+.slick-next:before {
+  color: #ff0911;
+  padding: -35px;
+} */
+
 .bed_text {
   /* text-shadow: white 2px 5px; */
   color: var(--font-color, #333);
@@ -169,4 +179,829 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+}
+.my-image {
+  background-image: url("./images/slider.png");
+  width: 100%;
+}
+.travel {
+  background-image: url("./images/travel.webp");
+  width: 100%;
+}
+.back {
+  background-image: url("./images/back.webp");
+}
+.back1 {
+  background-image: url("./images/stamp.webp");
+}
+.journey {
+  font-family: "gill sans", "gill sans mt", Calibri, sans-serif !important;
+  line-height: 1.5;
+  color: black;
+}
+.deal {
+  width: 100%;
+  padding: 25px !important;
+  background-color: #f5f6f9;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  min-height: 400px !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+}
+
+.deal > div {
+  width: 100%;
+}
+
+.deal h2 {
+  color: #ff0911;
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 1.1;
+  margin-bottom: 5px;
+}
+
+.deal h5 {
+  color: #242424;
+  font-weight: 400;
+  letter-spacing: 0;
+  margin-bottom: 20px;
+  max-width: 240px;
+  font-size: 14px;
+}
+
+.deal .deal-content {
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+}
+
+.deal h4 {
+  max-width: 240px;
+  margin-top: 16px;
+  margin-bottom: 16px !important;
+  font-weight: 400 !important;
+  font-size: 18px !important;
+  color: #666666 !important;
+  line-height: 1.23;
+}
+
+.deal .product-title a {
+  color: #1a1a1a;
+}
+
+.deal .product-price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-flow: wrap;
+  flex-flow: wrap;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 1.25;
+  margin-bottom: 20px;
+  color: #ff0911;
+}
+
+.deal .product-price .new-price {
+  font-weight: 400;
+  letter-spacing: -0.01em;
+  margin-right: 10px;
+}
+
+.deal .product-price .old-price {
+  color: #cccccc;
+  text-decoration: line-through;
+}
+
+/* .deal .btn {
+  background: none;
+  border: 2px solid #ff0911;
+  color: #ff0911;
+  border-radius: 4px;
+  font-size: 13px;
+  font-weight: 600;
+  padding: 10px 24px;
+} */
+
+.deal .btn i {
+  margin-left: 5px;
+  font-size: 12px;
+  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+}
+
+.deal .btn {
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 700;
+  padding: 12px 30px;
+  border-radius: 4px;
+  color: #ff0911;
+  border: 1px solid #c90007;
+  cursor: pointer;
+  transition: all 0.3s linear 0s;
+  letter-spacing: 0.5px;
+}
+
+.deal .btn:hover i {
+  color: #fff;
+  margin-left: 10px;
+  transform: translateY(-5px);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+
+.deal .btn:hover {
+  border: #c90007 !important;
+  background-color: #c90007 !important;
+}
+
+.deal .deal-bottom {
+  -ms-flex-item-align: end;
+  align-self: flex-end;
+}
+
+.deal .deal-bottom .deals-countdown {
+  margin-left: -12px;
+  margin-bottom: 20px;
+}
+
+.deal-bottom .hover-up:hover {
+  color: #fff !important;
+  transform: translateY(-5px);
+  border: #c90007 !important;
+  transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
+}
+
+.banner-bg {
+  background-position: center;
+  background-size: cover;
+  padding: 50px;
+}
+
+.deals-countdown .countdown-section {
+  position: relative;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1;
+  padding: 0px 0px 0px 0px !important;
+  margin-right: 0rem !important;
+  margin-left: 0.8rem;
+  background-color: #ff0911;
+  border-radius: 4px;
+  border: none;
+  margin-bottom: 2rem;
+}
+
+.deals-countdown .countdown-section .countdown-amount {
+  display: inline-block;
+  color: #fff;
+  font-weight: 500;
+  font-size: 14px !important;
+  margin-bottom: 8px !important;
+  width: 40px !important;
+  height: 40px !important;
+  line-height: 40px !important;
+  text-align: center;
+}
+
+.deals-countdown .countdown-section .countdown-period {
+  position: absolute;
+  left: 0;
+  right: 0;
+  text-align: center;
+  bottom: -20px;
+  display: block;
+  font-weight: 400;
+  color: #90908e;
+  text-transform: uppercase;
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.deals-countdown .countdown-section:not(:last-child)::after {
+  color: #1a1a1a;
+  content: ":";
+  display: inline-block;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1;
+  position: absolute;
+  left: 100%;
+  margin-left: 4px !important;
+  margin-top: -1px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+}
+
+@media only screen and (max-width: 375px) {
+  .deal {
+    padding: 30px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .deal {
+    background-position: top !important;
+  }
+
+  .deals-countdown .countdown-section .countdown-amount {
+    width: 30px;
+    height: 40px;
+    line-height: 40px;
+  }
+}
+/*SHOP*/
+.product-cart-wrap {
+  position: relative !important;
+  background-color: #fff;
+  border: 0px !important;
+  border-radius: 0px !important;
+  overflow: hidden !important;
+  transition: 0.2s !important;
+  -moz-transition: 0.2s !important;
+  -webkit-transition: 0.2s !important;
+  -o-transition: 0.2s !important;
+}
+
+.product-cart-wrap:hover {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
+}
+
+.product-cart-wrap .product-img-action-wrap {
+  position: relative;
+  background-color: #fff;
+  padding: 6px !important;
+  overflow: hidden;
+  max-height: fit-content !important;
+  z-index: 9;
+}
+
+.product-cart-wrap .product-img-action-wrap .product-img {
+  position: relative;
+  overflow: hidden;
+  border-radius: 0px !important;
+}
+
+.product-cart-wrap .product-img-action-wrap .product-img a {
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.product-cart-wrap .product-img-action-wrap .product-img a img {
+  width: 100% !important;
+  height: auto !important;
+  border-radius: 0px !important;
+}
+
+.product-cart-wrap .product-img-action-wrap .product-img a img.hover-img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 2;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.25s opacity, 0.25s visibility,
+    transform 1.5s cubic-bezier(0, 0, 0.2, 1),
+    -webkit-transform 1.5s cubic-bezier(0, 0, 0.2, 1);
+}
+
+.product-cart-wrap .product-img-action-wrap .product-img-zoom a img {
+  transition: all 1.5s cubic-bezier(0, 0, 0.05, 1);
+  -webkit-transition: all 1.5s cubic-bezier(0, 0, 0.05, 1);
+}
+
+.product-cart-wrap .product-action-1 {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  z-index: 9;
+}
+
+.product-cart-wrap .product-action-1.show {
+  visibility: visible;
+  opacity: 1;
+  bottom: 1px !important;
+  left: unset;
+  right: 22px !important;
+  top: unset;
+  -webkit-transform: none;
+  transform: none;
+}
+
+.product-cart-wrap .product-action-1 button,
+.product-cart-wrap .product-action-1 .action-btn {
+  width: 40px;
+  height: 40px;
+  line-height: 44px;
+  border-radius: 50px;
+  background-color: rgb(225, 225, 225) !important;
+  text-align: center;
+  margin-right: 3px;
+  position: relative;
+  display: inline-block;
+  border: 1px solid rgb(225, 225, 225);
+}
+
+.product-cart-wrap .product-action-1 button.small,
+.product-cart-wrap .product-action-1 .action-btn.small {
+  width: 32px;
+  height: 32px;
+  line-height: 32px;
+}
+
+.product-cart-wrap .product-action-1 button.small i,
+.product-cart-wrap .product-action-1 .action-btn.small i {
+  font-size: 12px;
+}
+
+.product-cart-wrap .product-action-1 button:after,
+.product-cart-wrap .product-action-1 .action-btn:after {
+  bottom: 100%;
+  left: 20% !important;
+  position: absolute;
+  white-space: nowrap;
+  border-radius: 5px;
+  font-size: 11px;
+  padding: 7px 10px;
+  color: #ffffff;
+  background-color: #ff0911;
+  content: attr(aria-label);
+  line-height: 1.3;
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
+  -webkit-box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
+  transition: opacity 0.3s ease, visibility 0.3s ease,
+    transform 0.3s cubic-bezier(0.71, 1.7, 0.77, 1.24),
+    -webkit-transform 0.3s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translateX(-50%) translateY(0px);
+  transform: translateX(-50%) translateY(0px);
+}
+
+.product-cart-wrap .product-action-1 button:before,
+.product-cart-wrap .product-action-1 .action-btn:before {
+  content: "";
+  position: absolute;
+  left: calc(50% - 7px);
+  bottom: 100%;
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
+  border: 7px solid transparent;
+  border-top-color: #ff0911;
+  z-index: 9;
+  margin-bottom: -13px;
+  transition-delay: 0.1s;
+  transition: opacity 0.3s ease, visibility 0.3s ease,
+    transform 0.3s cubic-bezier(0.71, 1.7, 0.77, 1.24),
+    -webkit-transform 0.3s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+  opacity: 0;
+  visibility: hidden;
+}
+
+.product-cart-wrap .product-action-1 button:last-child,
+.product-cart-wrap .product-action-1 .action-btn:last-child {
+  margin-right: 0;
+}
+
+.product-cart-wrap .product-action-1 button i,
+.product-cart-wrap .product-action-1 .action-btn i {
+  font-size: 15px;
+  margin-left: 1px;
+}
+
+.product-cart-wrap .product-action-1 button:hover,
+.product-cart-wrap .product-action-1 .action-btn:hover {
+  background-color: #ff0911;
+  border: 1px solid transparent;
+}
+
+.product-cart-wrap .product-action-1 button:hover:after,
+.product-cart-wrap .product-action-1 .action-btn:hover:after {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transform: translateX(-50%) translateY(-8px);
+  transform: translateX(-50%) translateY(-8px);
+}
+
+.product-cart-wrap .product-action-1 button:hover:before,
+.product-cart-wrap .product-action-1 .action-btn:hover:before {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transform: translateY(-8px);
+  transform: translateY(-8px);
+}
+
+.product-cart-wrap .product-action-1 button:hover i,
+.product-cart-wrap .product-action-1 .action-btn:hover i {
+  color: #000 !important;
+}
+
+.product-cart-wrap .product-badges {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.product-cart-wrap .product-badges.product-badges-mrg span {
+  margin: 0 5px 0 0;
+}
+
+.product-cart-wrap .product-badges.product-badges-position {
+  position: absolute;
+  left: 20px;
+  top: 19px;
+  z-index: 9;
+}
+
+.product-cart-wrap .product-badges span {
+  display: inline-block;
+  font-size: 12px;
+  line-height: 1;
+  border-radius: 40px;
+  color: #fff;
+  padding: 5px 10px;
+}
+
+.product-cart-wrap .product-badges span:last-child {
+  margin-right: 0px;
+}
+
+.product-cart-wrap .product-badges span.hot {
+  background-color: #ea1d25;
+}
+
+.product-cart-wrap .product-badges span.new {
+  background-color: #ea1d25;
+}
+
+.product-cart-wrap .product-badges span.sale {
+  background-color: #ea1d25;
+}
+
+.product-cart-wrap .product-badges span.best {
+  background-color: #ea1d25 !important;
+  color: white !important;
+}
+
+.product-cart-wrap .product-content-wrap {
+  padding: 0 6px 6px 6px !important;
+}
+
+.product-cart-wrap .product-content-wrap .product-category {
+  margin-bottom: 5px;
+}
+
+.product-cart-wrap .product-content-wrap .product-category a {
+  color: #90908e;
+  font-size: 12px;
+}
+
+.product-cart-wrap .product-content-wrap .product-category a:hover {
+  color: #ff0911;
+}
+
+.product-cart-wrap .product-content-wrap h2 {
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.product-cart-wrap .product-content-wrap h2 a {
+  color: #1a1a1a;
+  text-decoration: none !important;
+  transition: all 0.3s ease 0s;
+}
+
+.product-cart-wrap .product-content-wrap h2 a:hover {
+  color: #ff0911;
+}
+
+.product-cart-wrap .product-content-wrap .product-price {
+  padding-top: 5px;
+}
+
+.product-cart-wrap .product-content-wrap .product-price span {
+  font-size: 14px !important;
+  font-weight: bold;
+  color: #ff0911 !important;
+}
+
+.product-cart-wrap .product-content-wrap .product-price span.new-price {
+  color: #ff0911;
+}
+
+.product-cart-wrap .product-content-wrap .product-price span.old-price {
+  font-size: 12px !important;
+  font-weight: 400;
+  color: #90908e !important;
+  margin: 0 0 0 7px;
+  text-decoration: line-through;
+}
+
+.product-cart-wrap .product-content-wrap .rating-result {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.product-cart-wrap .product-content-wrap .rating-result > span {
+  display: block;
+  overflow: hidden;
+  margin-left: 5px;
+}
+
+.product-cart-wrap .product-content-wrap .rating-result::before {
+  display: none;
+}
+
+.product-cart-wrap .product-content-wrap .add-to-cart {
+  width: 44px;
+  height: 44px;
+  line-height: 44px;
+  border-radius: 5px;
+  background-color: #f5f5f5;
+  text-align: center;
+  display: block;
+  color: #1a1a1a;
+  font-size: 16px;
+  position: absolute;
+  bottom: 25px;
+  right: 20px;
+  font-weight: 300;
+}
+
+.product-cart-wrap .product-content-wrap .add-to-cart:hover {
+  background-color: #ff0911;
+  color: #fff;
+}
+
+.product-cart-wrap .product-content-wrap .add-to-cart img {
+  width: 20px;
+  display: inline-block;
+  margin-top: 11px;
+}
+
+.product-cart-wrap .product-stock .status-bar {
+  background-color: #ededed;
+  margin: 0px 0 10px;
+  border-radius: 5px;
+}
+
+.product-cart-wrap .product-stock .status-bar .sold-bar {
+  background-image: linear-gradient(235deg, #ff0911 0%, #77ccfd 100%);
+  border-radius: 4px;
+  height: 8px;
+}
+
+.product-cart-wrap .product-stock .status-bar .sold-bar.sold-bar-width-33 {
+  width: 33.333333333333%;
+}
+
+.product-cart-wrap .product-stock .status-bar .sold-bar.sold-bar-width-10 {
+  width: 10%;
+}
+
+.product-cart-wrap .product-stock .status-bar .sold-bar.sold-bar-width-40 {
+  width: 40%;
+}
+
+.product-cart-wrap .product-stock .status-bar .sold-bar.sold-bar-width-6 {
+  width: 6.6666666666667%;
+}
+
+.product-cart-wrap .product-stock .status-bar .sold-bar.sold-bar-width-42 {
+  width: 42.857142857143%;
+}
+
+.product-cart-wrap .product-stock .product-stock-status {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.product-cart-wrap .product-stock .product-stock-status .sold {
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  margin-right: 20px;
+}
+
+.product-cart-wrap .product-stock .product-stock-status .available {
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+}
+
+.product-cart-wrap
+  .product-stock
+  .product-stock-status
+  .stock-status-same-style
+  span {
+  font-size: 15px;
+}
+
+.product-cart-wrap
+  .product-stock
+  .product-stock-status
+  .stock-status-same-style
+  span.label {
+  color: #1a1a1a;
+}
+
+.product-cart-wrap
+  .product-stock
+  .product-stock-status
+  .stock-status-same-style
+  span.value {
+  font-weight: 700;
+  color: #333;
+}
+
+.product-cart-wrap:hover .product-img-action-wrap .product-img a img.hover-img {
+  opacity: 1;
+  visibility: visible;
+}
+
+.product-cart-wrap:hover .product-img-action-wrap .product-action-1 {
+  opacity: 1;
+  visibility: visible;
+}
+
+.product-cart-wrap:hover .product-img-zoom a img {
+  -webkit-transform: scale3d(1.05, 1.05, 1.05) translateZ(0);
+  transform: scale3d(1.05, 1.05, 1.05) translateZ(0);
+}
+
+.product-cart-wrap.small {
+  border: 0;
+  text-align: center;
+}
+
+.product-cart-wrap.small .rating-result {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.bg-star {
+  color: #e3e3e3;
+}
+
+.product-cart-wrap.small .product-content-wrap {
+  padding: 5px 15px 0 15px;
+}
+
+.product-cart-wrap.small .product-price {
+  padding-top: 0;
+}
+
+.product-cart-wrap.small:hover {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+.product-cart-wrap.small h2 {
+  border-bottom: 0;
+  padding: 0;
+  margin-bottom: 0;
+}
+
+.product-cart-wrap.small .product-badges span {
+  font-size: 10px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .product-cart-wrap .product-action-1 .action-btn {
+    width: 34px;
+    height: 34px;
+    line-height: 40px;
+    font-size: 13px;
+  }
+
+  .product-img-action-wrap .product-action-1 {
+    width: 100% !important;
+    text-align: center;
+  }
+}
+
+.variations-box {
+  background-color: #ffffff;
+  display: flex;
+  margin-top: -60px;
+  margin-bottom: 6px;
+  position: absolute;
+  margin-left: 3px;
+  margin-right: 3px;
+  visibility: hidden;
+  z-index: 99 !important;
+}
+
+.variations-box .varaiation-item {
+  padding: 4px 4px 4px 4px;
+  display: inline-flex;
+  cursor: pointer;
+}
+
+.varaiation-item .view_more_link {
+  margin-top: 13px;
+  /* margin-left: 13px; */
+  font-weight: 500;
+  color: rgb(61, 58, 58);
+  /* font-style: italic; */
+  font-size: 10px;
+  text-decoration: none !important;
+}
+
+.product-cart-wrap:hover .variations-box {
+  visibility: visible;
+}
+.section-title {
+  font-weight: 600;
+}
+
+.section-title.style-1 {
+  position: relative;
+  border-bottom: 1px solid #e2e9e1;
+  padding-bottom: 10px;
+  font-size: 16px;
+}
+
+.section-title.style-1::after {
+  content: "";
+  width: 50px;
+  height: 2px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: #ff0911;
+}
+
+.section-title span {
+  color: #ff0911;
+}
+
+h3.section-title {
+  font-size: 22px;
+}
+
+.product-list-small article:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.product-list-small .title-small {
+  font-size: 13px;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+
+.product-list-small .title-small a {
+  color: #1a1a1a;
+  text-decoration: none;
+}
+
+.product-list-small .product-price {
+  color: #ff0911;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.product-list-small .product-price span.old-price {
+  font-size: 14px;
+  font-weight: 400;
+  color: #90908e;
+  margin: 0 0 0 7px;
+  text-decoration: line-through;
+}
+
+.pt-50 {
+  padding-top: 50px !important;
 }
